argocd/manifests/media-services/jellyseerr/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jellyseerr
  namespace: media-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jellyseerr
  template:
    metadata:
      labels:
        app: jellyseerr
    spec:
      containers:
        - name: jellyseerr
          image: fallenbagel/jellyseerr:latest
          ports:
            - containerPort: 5055
          volumeMounts:
            - mountPath: /app/config
              name: jellyseerr-config
          livenessProbe:
            httpGet:
              path: /api/v1/status
              port: 5055
            initialDelaySeconds: 20
            timeoutSeconds: 3
            periodSeconds: 15
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /api/v1/status
              port: 5055
            initialDelaySeconds: 20
            timeoutSeconds: 3
            periodSeconds: 15
            failureThreshold: 3
      volumes:
        - name: jellyseerr-config
          hostPath:
            path: /var/lib/jellyseerr/config
            type: DirectoryOrCreate
