argocd/manifests/media-services/jellyseerr/service.yml
apiVersion: v1
kind: Service
metadata:
  name: jellyseerr
  namespace: media-system
spec:
  selector:
    app: jellyseerr
  ports:
    - port: 80
      targetPort: 5055
